WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24248
REGRESSION: Pixel test regressions from "fixed overflow not painted in normal order" (
r41203
)
https://bugs.webkit.org/show_bug.cgi?id=24248
Summary
REGRESSION: Pixel test regressions from "fixed overflow not painted in normal...
Tony Chang
Reported
2009-02-27 13:42:56 PST
This has caused the following pixel test results to regress: LayoutTests/fast/overflow/004.html LayoutTests/fast/overflow/hidden-scrollbar-resize.html LayoutTests/fast/overflow/hit-test-overflow-controls.html 004.html seems pretty minor (the border moved) hidden-scrollbar-resize.html is clearly wrong. The scrollbars shouldn't be visible but they are. hit-test-overflow-controls.html seems to show the resizer corner border not being clipped properly. I can see some tearing if I resize the text area smaller. The original bug was
https://bugs.webkit.org/show_bug.cgi?id=23740
Attachments
Patch
(1.44 KB, patch)
2009-03-05 12:28 PST
,
Dave Hyatt
eric
: review+
Details
Formatted Diff
Diff
Patch
(2.30 KB, patch)
2009-03-05 12:34 PST
,
Dave Hyatt
eric
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2009-03-05 12:28:21 PST
Created
attachment 28316
[details]
Patch
Eric Seidel (no email)
Comment 2
2009-03-05 12:31:53 PST
Comment on
attachment 28316
[details]
Patch LGTM.
Dave Hyatt
Comment 3
2009-03-05 12:34:00 PST
Created
attachment 28317
[details]
Patch
Eric Seidel (no email)
Comment 4
2009-03-05 12:35:22 PST
Comment on
attachment 28317
[details]
Patch Looks even better. :)
Dave Hyatt
Comment 5
2009-03-05 12:37:25 PST
Fixed in
r41458
.
Tony Chang
Comment 6
2009-03-09 11:46:23 PDT
LayoutTests/fast/overflow/004.html seems to still be different from before this change (the border in the middle moved a few pixels).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug